--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "warebulkcommerce",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,6 +10,7 @@
   "dependencies": {
     "next": "10.0.7",
     "react": "17.0.1",
+    "react-csv": "^2.0.3",
     "react-dom": "17.0.1"
   }
 }
